# nsp

./: .gitmodules  CMakeLists.txt  README.md  nsp.cpp
example/: .config.json.swp  config.json
include/: configuration.h  configuration_factory.h  date.h  employee.h  grade.h  iconfiguration.h  irule.h  json_configuration.h  log.h  nsp_types.h  nsptypes.h  printers.h  rule_engine.h  ruleengine.h  schedule.h  schedule_action.h  shiftpattern.h  solution.h  solution_factory.h  solutionfactory.h  solver.h  utils.h
include/rules/: consecutive_days_rule.h  include_all_rules.h  irule.h  max_hours_per_week_rule.h  min_hours_per_week.h  min_hours_per_week_rule.h  rooster_requirement_rule.h  rule_engine.h  rule_factory.h  shop_closed_rule.h  vacation_days_rule.h
src/: configuration.cpp  configuration_factory.cpp  date.cpp  employee.cpp  json_configuration.cpp  printers.cpp  schedule.cpp  schedule_action.cpp  solution.cpp  solution_factory.cpp  solver.cpp  utils.cpp
src/rules/: consecutive_days_rule.cpp  max_hours_per_week_rule.cpp  min_hours_per_week_rule.cpp  rooster_requirement_rule.cpp  rule_engine.cpp  shop_closed_rule.cpp  vacation_days_rule.cpp
test/: test_configuration.cpp  test_date.cpp  test_schedule.cpp  test_solution.cpp
